[package]
name = "rust_todo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "^1.0.41"
chrono = "0.4.19"
uuid = { version = "0.8", features = ["serde", "v4"] }